# app_login_agent_automation_cli

./: CHANGELOG.md  CODE_BEST_PRACTICES.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_STRUCTURE_REPORT.md  CONTRIBUTING.md  FULL_FILE_STRUCTURE.md  GITHUB_BEST_PRACTICES.md  IMPLEMENTATION_TRACKER.md  MCP_INTEGRATION_SUMMARY.md  MCP_SERVER_RUNNER_GUIDE.md  MCP_SETUP_GUIDE.md  PROJECT_DESIGN_MASTER_PLAN.md  README.md  SECURITY.md  SECURITY_BEST_PRACTICES.md  SIMULATION_RUN.md  SYSTEM_DESIGN_ARCHITECTURE.md  TESTING_BEST_PRACTICES.md  __init__.py  application_automator.py  automation_workflow.py  cli.py  dashboard_cli.py  data_extractor.py  debug_sites.html  design_preferences.md  document_parser.py  form_mapper.py  google_sites.db  grant_config.yaml  grant_dashboard.py  grant_database.py  grant_list_snapshot.yaml  grants.db  index copy.html  index.html  inject_mcp_tools.py  instagram.db  llms.txt  mcp_browser_integration.py  (+19 more)
agents/: FOLDER_BEST_PRACTICES.md
data/: FOLDER_BEST_PRACTICES.md  instagram_trending.csv  tiktok_trending.csv  youtube_trending.csv
docs/: FOLDER_BEST_PRACTICES.md  README.md  api.md  build-notes.md  cli-reference.html  example-output.md  index.html  index2.html  instagram_dashboard.html  login-test-results.md  publishing.md  quick-start.html  quick-start.md  script.js  simulation-run.md  styles.css  trending_dashboard.html  usage-examples.md
docs/data/: instagram_trending.csv  tiktok_trending.csv  youtube_trending.csv
docs/mcp/: commands-test-results.md  integration-summary.md  server-runner-guide.md  setup-guide.md  tools-setup.md
docs/screenshots/: README.md
my_new_website/: FOLDER_BEST_PRACTICES.md  business_profile.md  design_preferences.md  page_content.md
src/: FOLDER_BEST_PRACTICES.md
src/grant_automation_cli/: __init__.py  __main__.py  application_automator.py  automation_workflow.py  (+19 more)
src/grant_automation_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: FOLDER_BEST_PRACTICES.md
tests/: FOLDER_BEST_PRACTICES.md  __init__.py  test_google_sites_extractor.py  test_login.py  test_login_cursor.py  test_login_with_mcp.py  test_package.py
(+17 files in other folders)
