[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grant-automation-cli"
version = "1.0.0"
description = "CLI and SDK for 4Culture grant application automation with browser automation and MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "the project authors" }]
keywords = ["cli", "automation", "grants", "playwright", "mcp", "4culture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "playwright>=1.40.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
grant-automation-cli = "grant_automation_cli.sdk_cli:main"

[project.urls]
Repository = "https://github.com/BlackFoxgamingstudio/app_login_agent_automation_cli"
Documentation = "https://github.com/BlackFoxgamingstudio/app_login_agent_automation_cli#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: marks tests as integration (browser/MCP, may be slow or require env)",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E722", "F841", "W293", "W291"]

[tool.coverage.run]
source = ["src/grant_automation_cli"]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
